--- a/src/main/resources/assets/herobrine/lang/en_us.json
+++ b/src/main/resources/assets/herobrine/lang/en_us.json
@@ -1,41 +1,41 @@
 {
-  "item.herobrine.bedrock_sword": "§dBedrock Sword",
-  "item.herobrine.herobrine_warrior_spawn_egg": "Herobrine Warrior Spawn Egg",
-  "block.herobrine.herobrine_alter": "§eAlter of Herobrine",
-  "entity.herobrine.herobrine_warrior": "Herobrine",
-  "item.herobrine.cursed_diamond": "Cursed Diamond",
-  "item.herobrine.cursed_diamond_sword": "Cursed Diamond Sword",
-  "item.herobrine.cursed_diamond_axe": "Cursed Diamond Axe",
-  "item.herobrine.cursed_diamond_pickaxe": "Cursed Diamond Pickaxe",
-  "item.herobrine.cursed_diamond_hoe": "Cursed Diamond Hoe",
-  "item.herobrine.cursed_diamond_shovel": "Cursed Diamond Shovel",
-  "item.herobrine.cursed_diamond_helmet": "Cursed Diamond Helmet",
-  "item.herobrine.cursed_diamond_chestplate": "Cursed Diamond Chestplate",
-  "item.herobrine.cursed_diamond_leggings": "Cursed Diamond Leggings",
-  "item.herobrine.cursed_diamond_boots": "Cursed Diamond Boots",
-  "biome.herobrine.cursed_forest": "Cursed Forest",
-  "item.herobrine.cursed_dust": "Cursed Dust",
-  "item.herobrine.holy_water": "Holy Water",
-  "item.herobrine.unholy_water": "Unholy Water",
-  "entity.herobrine.holy_water": "Holy Water",
-  "entity.herobrine.unholy_water": "Unholy Water",
-  "entity.herobrine.infected_pig": "Infected Pig",
-  "item.herobrine.infected_pig_spawn_egg": "Infected Pig Spawn Egg",
-  "entity.herobrine.infected_chicken": "Infected Chicken",
-  "item.herobrine.infected_chicken_spawn_egg": "Infected Chicken Spawn Egg",
-  "item.herobrine.infected_sheep_spawn_egg": "Infected Sheep Spawn Egg",
-  "entity.herobrine.infected_sheep": "Infected Sheep",
-  "item.herobrine.infected_cow_spawn_egg": "Infected Cow Spawn Egg",
-  "entity.herobrine.infected_cow": "Infected Cow",
-  "entity.herobrine.infected_mooshroom": "Infected Mooshroom",
-  "item.herobrine.infected_mooshroom_spawn_egg": "Infected Mooshroom Spawn Egg",
-  "item.herobrine.infected_villager_spawn_egg": "Infected Villager Spawn Egg",
-  "entity.herobrine.infected_villager": "Infected Villager",
-  "entity.herobrine.herobrine_spy": "Herobrine",
-  "item.herobrine.herobrine_spy_spawn_egg": "Herobrine Spy Spawn Egg",
-  "entity.herobrine.herobrine_builder": "Herobrine",
-  "item.herobrine.herobrine_builder_spawn_egg": "Herobrine Builder Spawn Egg",
-  "item.herobrine.herobrine_mage_spawn_egg": "Herobrine Mage Spawn egg",
-  "entity.herobrine.herobrine_mage": "Herobrine",
-  "entity.herobrine.fake_herobrine_mage": "Herobrine"
+  "item.herobrine.bedrock_sword": "§Бедроковый меч",
+  "item.herobrine.herobrine_warrior_spawn_egg": "Яйцо призыва хиробрина-война",
+  "block.herobrine.herobrine_alter": "§eАлтарь Хиробрина",
+  "entity.herobrine.herobrine_warrior": "Хиробрин",
+  "item.herobrine.cursed_diamond": "Проклятый алмаз",
+  "item.herobrine.cursed_diamond_sword": "Проклятый Алмазный меч",
+  "item.herobrine.cursed_diamond_axe": "Проклятый Алмазный топор",
+  "item.herobrine.cursed_diamond_pickaxe": "Проклятая Алмазная кирка",
+  "item.herobrine.cursed_diamond_hoe": "Проклятая Алмазная мотыга",
+  "item.herobrine.cursed_diamond_shovel": "Проклятая Алмазная лопата",
+  "item.herobrine.cursed_diamond_helmet": "Проклятый Алмазный шлем",
+  "item.herobrine.cursed_diamond_chestplate": "Проклятый Алмазный нагрудник",
+  "item.herobrine.cursed_diamond_leggings": "Проклятые Алмазные поножи",
+  "item.herobrine.cursed_diamond_boots": "Проклятые Алмазные ботинки",
+  "biome.herobrine.cursed_forest": "Проклятый лес",
+  "item.herobrine.cursed_dust": "Проклятая пыль",
+  "item.herobrine.holy_water": "Святая вода",
+  "item.herobrine.unholy_water": "Нечестивая вода",
+  "entity.herobrine.holy_water": "Святая вода",
+  "entity.herobrine.unholy_water": "Нечестивая вода",
+  "entity.herobrine.infected_pig": "Заражённая свинья",
+  "item.herobrine.infected_pig_spawn_egg": "Яйцо призыва заражённой свиньи",
+  "entity.herobrine.infected_chicken": "Заражённая курица",
+  "item.herobrine.infected_chicken_spawn_egg": "Яйцо призыва заражённой курицы",
+  "item.herobrine.infected_sheep_spawn_egg": "Яйцо призыва заражённой овцы",
+  "entity.herobrine.infected_sheep": "Заражённая овца",
+  "item.herobrine.infected_cow_spawn_egg": "Яйцо призыва заражённой коровы",
+  "entity.herobrine.infected_cow": "Заражённая корова",
+  "entity.herobrine.infected_mooshroom": "Заражённый муухомор",
+  "item.herobrine.infected_mooshroom_spawn_egg": "Яйцо призыва заражённого муухомора",
+  "item.herobrine.infected_villager_spawn_egg": "Яйцо призыва заражённого жителя",
+  "entity.herobrine.infected_villager": "Заражённый житель",
+  "entity.herobrine.herobrine_spy": "Хиробрин",
+  "item.herobrine.herobrine_spy_spawn_egg": "Яйцо призыва хиробрина-наблюдателя",
+  "entity.herobrine.herobrine_builder": "Хиробрин",
+  "item.herobrine.herobrine_builder_spawn_egg": "Яйцо призыва хиробрина-строителя",
+  "item.herobrine.herobrine_mage_spawn_egg": "Яйцо призыва хиробрина-мага",
+  "entity.herobrine.herobrine_mage": "Хиробрин",
+  "entity.herobrine.fake_herobrine_mage": "Хиробрин"
 }
