--- a/src/main/resources/assets/herobrine/lang/ru_ru.json
+++ b/src/main/resources/assets/herobrine/lang/ru_ru.json
@@ -2,7 +2,7 @@
   "item.herobrine.bedrock_sword": "§Бедроковый меч",
   "item.herobrine.herobrine_warrior_spawn_egg": "Яйцо призыва хиробрина-война",
   "block.herobrine.herobrine_alter": "§eАлтарь Хиробрина",
-  "entity.herobrine.herobrine_warrior": "Хиробрин",
+  "entity.herobrine.herobrine_warrior": "Хиробрин-войн",
   "item.herobrine.cursed_diamond": "Проклятый алмаз",
   "item.herobrine.cursed_diamond_sword": "Проклятый Алмазный меч",
   "item.herobrine.cursed_diamond_axe": "Проклятый Алмазный топор",
@@ -19,8 +19,8 @@
   "item.herobrine.unholy_water": "Нечестивая вода",
   "entity.herobrine.holy_water": "Святая вода",
   "entity.herobrine.unholy_water": "Нечестивая вода",
-  "entity.herobrine.infected_pig": "Заражённая свинья",
-  "item.herobrine.infected_pig_spawn_egg": "Яйцо призыва заражённой свиньи",
+  "entity.herobrine.infected_pig": "Зараженная свинья",
+  "item.herobrine.infected_pig_spawn_egg": "Яйцо призыва зараженной свиньи",
   "entity.herobrine.infected_chicken": "Заражённая курица",
   "item.herobrine.infected_chicken_spawn_egg": "Яйцо призыва заражённой курицы",
   "item.herobrine.infected_sheep_spawn_egg": "Яйцо призыва заражённой овцы",
@@ -28,35 +28,35 @@
   "item.herobrine.infected_cow_spawn_egg": "Яйцо призыва заражённой коровы",
   "entity.herobrine.infected_cow": "Заражённая корова",
   "entity.herobrine.infected_mooshroom": "Заражённый муухомор",
-  "item.herobrine.infected_mooshroom_spawn_egg": "Яйцо призыва заражённого муухомора",
-  "item.herobrine.infected_villager_spawn_egg": "Яйцо призыва заражённого жителя",
+  "item.herobrine.infected_mooshroom_spawn_egg": "Яйцо призыва зараженного муухомора",
+  "item.herobrine.infected_villager_spawn_egg": "Яйцо призыва зараженного жителя",
   "entity.herobrine.infected_villager": "Заражённый житель",
-  "entity.herobrine.herobrine_spy": "Хиробрин",
+  "entity.herobrine.herobrine_spy": "Хиробрин-шпион",
   "item.herobrine.herobrine_spy_spawn_egg": "Яйцо призыва хиробрина-наблюдателя",
-  "entity.herobrine.herobrine_builder": "Хиробрин",
+  "entity.herobrine.herobrine_builder": "Хиробрин-строитель",
   "item.herobrine.herobrine_builder_spawn_egg": "Яйцо призыва хиробрина-строителя",
   "item.herobrine.herobrine_mage_spawn_egg": "Яйцо призыва хиробрина-мага",
-  "entity.herobrine.herobrine_mage": "Хиробрин",
-  "entity.herobrine.fake_herobrine_mage": "Хиробрин",
+  "entity.herobrine.herobrine_mage": "Хиробрин-маг",
+  "entity.herobrine.fake_herobrine_mage": "Лже-Хиробрин-маг",
   "block.herobrine.cursed_diamond_block": "Проклятый Блок Алмаза",
-  "block.herobrine.herobrine_statue": "Статуя Хиробрин",
-  "block.herobrine.herobrine_statue_top": "Статуя Хиробрин",
-  "item.herobrine.steve_survivor_spawn_egg": "Яйцо призыва оставшийся в живых",
-  "entity.herobrine.steve_survivor": "оставшийся в живых",
-  "item.herobrine.alex_survivor_spawn_egg": "Яйцо призыва оставшийся в живых",
-  "entity.herobrine.alex_survivor": "оставшийся в живых",
+  "block.herobrine.herobrine_statue": "Статуя Хиробрина",
+  "block.herobrine.herobrine_statue_top": "Верхушка статуи Хиробрина",
+  "item.herobrine.steve_survivor_spawn_egg": "Яйцо призыва выжившего Стива",
+  "entity.herobrine.steve_survivor": "Выживший Стив",
+  "item.herobrine.alex_survivor_spawn_egg": "Яйцо призыва выжившей Алекс",
+  "entity.herobrine.alex_survivor": "Выжившая Алекс",
   "entity.herobrine.infected_wolf": "Зараженный волк",
-  "item.herobrine.infected_wolf_spawn_egg": "Яйцо призыва Зараженный волк",
+  "item.herobrine.infected_wolf_spawn_egg": "Яйцо призыва зараженного волка",
   "entity.herobrine.infected_llama": "Зараженная лама",
-  "item.herobrine.infected_llama_spawn_egg": "Яйцо призыва Зараженная лама",
+  "item.herobrine.infected_llama_spawn_egg": "Яйцо призыва зараженной ламы",
   "entity.herobrine.infected_horse": "Зараженная лошадь",
-  "item.herobrine.infected_horse_spawn_egg": "Яйцо призыва Зараженная лошадь",
+  "item.herobrine.infected_horse_spawn_egg": "Яйцо призыва зараженной лошади",
   "entity.herobrine.infected_donkey": "Зараженный осел",
-  "item.herobrine.infected_donkey_spawn_egg": "Яйцо призыва Зараженный осел",
+  "item.herobrine.infected_donkey_spawn_egg": "Яйцо призыва зараженного осла",
   "entity.herobrine.infected_rabbit": "Зараженный кролик",
-  "item.herobrine.infected_rabbit_spawn_egg": "Яйцо призыва Зараженный кролик",
+  "item.herobrine.infected_rabbit_spawn_egg": "Яйцо призыва зараженного кролика",
   "entity.herobrine.infected_bat": "Зараженная летучая мышь",
-  "item.herobrine.infected_bat_spawn_egg": "Яйцо призыва Зараженная летучая мышь",
+  "item.herobrine.infected_bat_spawn_egg": "Яйцо призыва зараженной летучей мыши",
   "item.herobrine.purified_diamond": "Очищенный алмаз",
-  "block.herobrine.purified_diamond_block": "Очищенный Блок алмаз"
+  "block.herobrine.purified_diamond_block": "Очищенный алмазный блок"
 }
