--- a/src/main/resources/assets/herobrine/lang/ru_ru.json
+++ b/src/main/resources/assets/herobrine/lang/ru_ru.json
@@ -22,15 +22,15 @@
   "entity.herobrine.infected_pig": "Зараженная свинья",
   "item.herobrine.infected_pig_spawn_egg": "Яйцо призыва зараженной свиньи",
   "entity.herobrine.infected_chicken": "Заражённая курица",
-  "item.herobrine.infected_chicken_spawn_egg": "Яйцо призыва заражённой курицы",
-  "item.herobrine.infected_sheep_spawn_egg": "Яйцо призыва заражённой овцы",
-  "entity.herobrine.infected_sheep": "Заражённая овца",
-  "item.herobrine.infected_cow_spawn_egg": "Яйцо призыва заражённой коровы",
-  "entity.herobrine.infected_cow": "Заражённая корова",
-  "entity.herobrine.infected_mooshroom": "Заражённый муухомор",
+  "item.herobrine.infected_chicken_spawn_egg": "Яйцо призыва зараженной курицы",
+  "item.herobrine.infected_sheep_spawn_egg": "Яйцо призыва зараженной овцы",
+  "entity.herobrine.infected_sheep": "Зараженная овца",
+  "item.herobrine.infected_cow_spawn_egg": "Яйцо призыва зараженной коровы",
+  "entity.herobrine.infected_cow": "Зараженная корова",
+  "entity.herobrine.infected_mooshroom": "Зараженный муухомор",
   "item.herobrine.infected_mooshroom_spawn_egg": "Яйцо призыва зараженного муухомора",
   "item.herobrine.infected_villager_spawn_egg": "Яйцо призыва зараженного жителя",
-  "entity.herobrine.infected_villager": "Заражённый житель",
+  "entity.herobrine.infected_villager": "Зараженный житель",
   "entity.herobrine.herobrine_spy": "Хиробрин-шпион",
   "item.herobrine.herobrine_spy_spawn_egg": "Яйцо призыва хиробрина-наблюдателя",
   "entity.herobrine.herobrine_builder": "Хиробрин-строитель",
@@ -38,7 +38,7 @@
   "item.herobrine.herobrine_mage_spawn_egg": "Яйцо призыва хиробрина-мага",
   "entity.herobrine.herobrine_mage": "Хиробрин-маг",
   "entity.herobrine.fake_herobrine_mage": "Лже-Хиробрин-маг",
-  "block.herobrine.cursed_diamond_block": "Проклятый Блок Алмаза",
+  "block.herobrine.cursed_diamond_block": "Проклятый алмазный блок",
   "block.herobrine.herobrine_statue": "Статуя Хиробрина",
   "block.herobrine.herobrine_statue_top": "Верхушка статуи Хиробрина",
   "item.herobrine.steve_survivor_spawn_egg": "Яйцо призыва выжившего Стива",
