--- a/src/main/resources/assets/herobrine/lang/ru_ru.json
+++ b/src/main/resources/assets/herobrine/lang/ru_ru.json
@@ -37,7 +37,7 @@
   "item.herobrine.herobrine_builder_spawn_egg": "Яйцо призыва хиробрина-строителя",
   "item.herobrine.herobrine_mage_spawn_egg": "Яйцо призыва хиробрина-мага",
   "entity.herobrine.herobrine_mage": "Хиробрин-маг",
-  "entity.herobrine.fake_herobrine_mage": "Лже-Хиробрин-маг",
+  "entity.herobrine.fake_herobrine_mage": "Лжехиробрин-маг",
   "block.herobrine.cursed_diamond_block": "Проклятый алмазный блок",
   "block.herobrine.herobrine_statue": "Статуя Хиробрина",
   "block.herobrine.herobrine_statue_top": "Верхушка статуи Хиробрина",
